integrating user registration API

--- a/homepage02.html
+++ b/homepage02.html
@@ -66,12 +66,12 @@
                             <li><a href="homepage05.html">Homepage 5</a></li>
                           </ul>
                         </li>
-                        <li class="toggleable"><a class="menu-item" href="shop_grid+list_3col.html">Shop</a><span class="sub-menu--expander"><i class="icon_plus"></i></span>
+                        <li class="toggleable"><a class="menu-item" href="shop.html">Shop</a><span class="sub-menu--expander"><i class="icon_plus"></i></span>
                           <ul class="sub-menu">
                             <li><a href="shop_grid+list_fullwidth.html">Shop grid fullwidth</a></li>
                             <li><a href="shop_grid+list_fullwidth.html">Shop list fullwidth</a></li>
-                            <li><a href="shop_grid+list_3col.html">shop grid 3 column</a></li>
-                            <li><a href="shop_grid+list_3col.html">shop list 3 column</a></li>
+                            <li><a href="shop.html">shop grid 3 column</a></li>
+                            <li><a href="shop.html">shop list 3 column</a></li>
                             <li><a href="shop_detail.html">shop detail</a></li>
                             <li><a href="shop_detail_fullwidth.html">shop detail fullwidth</a></li>
                             <li><a href="shop_checkout.html">checkout</a></li>
@@ -141,14 +141,14 @@
                     <li class="toggleable"> <a class="menu-item active" href="index.html">Home</a>
                     
                     </li>
-                    <li class="toggleable"> <a class="menu-item" href="shop_grid+list_3col.html">Shop</a>
+                    <li class="toggleable"> <a class="menu-item" href="shop.html">Shop</a>
                       <ul class="sub-menu shop d-flex">
                         <div class="nav-column">
                           <h2>Layout shop</h2>
                           <li><a href="shop_grid+list_fullwidth.html">Shop grid fullwidth</a></li>
                           <li><a href="shop_grid+list_fullwidth.html">Shop list fullwidth</a></li>
-                          <li><a href="shop_grid+list_3col.html">shop grid 3 column</a></li>
-                          <li><a href="shop_grid+list_3col.html">shop list 3 column</a></li>
+                          <li><a href="shop.html">shop grid 3 column</a></li>
+                          <li><a href="shop.html">shop list 3 column</a></li>
                         </div>
                         <div class="nav-column">
                           <h2>Detail shop</h2>
@@ -202,7 +202,7 @@
                       <div class="slider-text d-flex flex-column align-items-center align-items-md-start">
                         <h5>Fruit Fresh</h5>
                         <h1>Orange Lemon</h1>
-                        <h3>#14.00<span>/ pakage</span></h3><a class="normal-btn" href="shop_grid+list_3col.html">Shop now</a>
+                        <h3>#14.00<span>/ pakage</span></h3><a class="normal-btn" href="shop.html">Shop now</a>
                       </div>
                     </div>
                     <div class="col-12 col-md-6">
@@ -224,7 +224,7 @@
                       <div class="slider-text d-flex flex-column align-items-center align-items-md-start">
                         <h5>Fruit Fresh</h5>
                         <h1>Orange Lemon</h1>
-                        <h3>#14.00<span>/ pakage</span></h3><a class="normal-btn" href="shop_grid+list_3col.html">Shop now</a>
+                        <h3>#14.00<span>/ pakage</span></h3><a class="normal-btn" href="shop.html">Shop now</a>
                       </div>
                     </div>
                     <div class="col-12 col-md-6">
@@ -242,7 +242,7 @@
                       <div class="slider-text d-flex flex-column align-items-center align-items-md-start">
                         <h5>Fruit Fresh</h5>
                         <h1>Orange Lemon</h1>
-                        <h3>#14.00<span>/ pakage</span></h3><a class="normal-btn" href="shop_grid+list_3col.html">Shop now</a>
+                        <h3>#14.00<span>/ pakage</span></h3><a class="normal-btn" href="shop.html">Shop now</a>
                       </div>
                     </div>
                     <div class="col-12 col-md-6">
@@ -255,9 +255,9 @@
           </div>
           <div class="slider-banner">
             <div class="row">
-              <div class="col-12 col-sm-4 col-lg-4"><a href="shop_grid+list_3col.html"><img class="img-fluid" src="assets/images/homepage02/banner_01.jpg" alt=""></a></div>
-              <div class="col-12 col-sm-4 col-lg-4"><a href="shop_grid+list_3col.html"><img class="img-fluid" src="assets/images/homepage02/banner_02.jpg" alt=""></a></div>
-              <div class="col-12 col-sm-4 col-lg-4"><a href="shop_grid+list_3col.html"><img class="img-fluid" src="assets/images/homepage02/banner_03.jpg" alt=""></a></div>
+              <div class="col-12 col-sm-4 col-lg-4"><a href="shop.html"><img class="img-fluid" src="assets/images/homepage02/banner_01.jpg" alt=""></a></div>
+              <div class="col-12 col-sm-4 col-lg-4"><a href="shop.html"><img class="img-fluid" src="assets/images/homepage02/banner_02.jpg" alt=""></a></div>
+              <div class="col-12 col-sm-4 col-lg-4"><a href="shop.html"><img class="img-fluid" src="assets/images/homepage02/banner_03.jpg" alt=""></a></div>
             </div>
           </div>
         </div>
@@ -1007,7 +1007,7 @@
                 <div class="dow-info">
                   <h2 class="title">Deal Of The Week</h2>
                   <p>Lorem ipsum dolor sit amet, consectetur adipisicing elitt incididunt ut labore </p>
-                  <div class="d-flex justify-content-center" id="event-countdown"></div><a class="normal-btn" href="shop_grid+list_3col.html">Shop now</a>
+                  <div class="d-flex justify-content-center" id="event-countdown"></div><a class="normal-btn" href="shop.html">Shop now</a>
                 </div>
               </div>
               <div class="col-7 col-lg-6">
@@ -2127,7 +2127,7 @@
                   </div>
                   <div class="col-6 col-md-5">
                     <div class="banner-text big text-center text-md-left">
-                      <h3 class="day">Strawberry Jam <br> 100% Natural Fruit <br> Juice <span class="sale">Sale Off 65% </span></h3><a class="normal-btn" href="shop_grid+list_3col.html">Shop now</a>
+                      <h3 class="day">Strawberry Jam <br> 100% Natural Fruit <br> Juice <span class="sale">Sale Off 65% </span></h3><a class="normal-btn" href="shop.html">Shop now</a>
                     </div>
                   </div>
                 </div>
@@ -2141,7 +2141,7 @@
                   </div>
                   <div class="col-6 col-md-5">
                     <div class="banner-text big text-center text-md-left">
-                      <h3 class="day">Cake <br> 100% Natural Fruit <br> Juice <span class="sale">Sale Off 65% </span></h3><a class="normal-btn" href="shop_grid+list_3col.html">Shop now</a>
+                      <h3 class="day">Cake <br> 100% Natural Fruit <br> Juice <span class="sale">Sale Off 65% </span></h3><a class="normal-btn" href="shop.html">Shop now</a>
                     </div>
                   </div>
                 </div>
@@ -2173,7 +2173,7 @@
                   </div>
                   <div class="col-12 col-sm-4 col-lg-4 col-xl-2 col-xxl-3 text-sm-center text-lg-left">
                     <div class="footer-quicklink">
-                      <h5>My Account</h5><a href="login.html">My Account</a><a href="contact.html">Contact</a><a href="shop_cart.html">Shopping cart</a><a href="shop_grid+list_3col.html">Shop</a>
+                      <h5>My Account</h5><a href="login.html">My Account</a><a href="contact.html">Contact</a><a href="shop_cart.html">Shopping cart</a><a href="shop.html">Shop</a>
                     </div>
                   </div>
                   <div class="col-12 col-sm-4 col-lg-4 col-xl-2 col-xxl-3 text-sm-center text-lg-left">
