--- a/shop_detail_fullwidth.html
+++ b/shop_detail_fullwidth.html
@@ -66,14 +66,14 @@
                             <li><a href="homepage05.html">Homepage 5</a></li>
                           </ul>
                         </li>
-                        <li class="toggleable"><a class="menu-item" href="shop_grid+list_3col.html">Shop</a><span class="sub-menu--expander"><i class="icon_plus"></i></span>
+                        <li class="toggleable"><a class="menu-item" href="shop.html">Shop</a><span class="sub-menu--expander"><i class="icon_plus"></i></span>
                           <ul class="sub-menu">
                             <li><a href="shop_grid+list_fullwidth.html">Shop grid fullwidth</a></li>
                             <li><a href="shop_grid+list_fullwidth.html">Shop list fullwidth</a></li>
-                            <li><a href="shop_grid+list_3col.html">shop grid 3 column</a></li>
-                            <li><a href="shop_grid+list_3col.html">shop list 3 column</a></li>
+                            <li><a href="shop.html">shop grid 3 column</a></li>
+                            <li><a href="shop.html">shop list 3 column</a></li>
                             <li><a href="shop_detail.html">shop detail</a></li>
-                            <li><a href="shop_detail_fullwidth.html">shop detail fullwidth</a></li>
+                            <li><a href="shop_detail_fullwidth.html">shop detail</a></li>
                             <li><a href="shop_checkout.html">checkout</a></li>
                             <li><a href="shop_order_complete.html">order complete</a></li>
                             <li><a href="shop_wishlist.html">wishlist</a></li>
@@ -158,18 +158,18 @@
                         <li><a href="homepage05.html">Homepage 5</a></li>
                       </ul>
                     </li>
-                    <li class="toggleable"> <a class="menu-item active" href="shop_grid+list_3col.html">Shop</a>
+                    <li class="toggleable"> <a class="menu-item active" href="shop.html">Shop</a>
                       <ul class="sub-menu shop d-flex">
                         <div class="nav-column">
                           <h2>Layout shop</h2>
                           <li><a href="shop_grid+list_fullwidth.html">Shop grid fullwidth</a></li>
                           <li><a href="shop_grid+list_fullwidth.html">Shop list fullwidth</a></li>
-                          <li><a href="shop_grid+list_3col.html">shop grid 3 column</a></li>
-                          <li><a href="shop_grid+list_3col.html">shop list 3 column</a></li>
+                          <li><a href="shop.html">shop grid 3 column</a></li>
+                          <li><a href="shop.html">shop list 3 column</a></li>
                         </div>
                         <div class="nav-column">
                           <h2>Detail shop</h2>
-                          <li><a href="shop_detail_fullwidth.html">shop detail fullwidth</a></li>
+                          <li><a href="shop_detail_fullwidth.html">shop detail</a></li>
                           <li><a href="shop_detail.html">shop detail sidebar</a></li>
                         </div>
                         <div class="nav-column">
@@ -212,8 +212,8 @@
         <div class="ogami-container-fluid">
           <ul>
             <li> <a class="breadcrumb-link" href="index.html"> <i class="fas fa-home"></i>Home</a></li>
-            <li> <a class="breadcrumb-link" href="shop_grid+list_3col.html">Shop</a></li>
-            <li> <a class="breadcrumb-link active" href="">Shop Detail Fullwidth</a></li>
+            <li> <a class="breadcrumb-link" href="shop.html">Shop</a></li>
+            <li> <a class="breadcrumb-link active" href="">Product Details</a></li>
           </ul>
         </div>
       </div>
@@ -485,7 +485,7 @@
                   </div>
                   <div class="col-12 col-sm-4 col-lg-4 col-xl-2 col-xxl-3 text-sm-center text-lg-left">
                     <div class="footer-quicklink">
-                      <h5>My Account</h5><a href="login.html">My Account</a><a href="contact.html">Contact</a><a href="shop_cart.html">Shopping cart</a><a href="shop_grid+list_3col.html">Shop</a>
+                      <h5>My Account</h5><a href="login.html">My Account</a><a href="contact.html">Contact</a><a href="shop_cart.html">Shopping cart</a><a href="shop.html">Shop</a>
                     </div>
                   </div>
                   <div class="col-12 col-sm-4 col-lg-4 col-xl-2 col-xxl-3 text-sm-center text-lg-left">
