--- a/shop_wishlist.html
+++ b/shop_wishlist.html
@@ -59,14 +59,14 @@
                     <li class="toggleable"> <a class="menu-item" href="index.html">Home</a>
                      
                     </li>
-                    <li class="toggleable"> <a class="menu-item active" href="shop_grid+list_3col.html">Shop</a>
+                    <li class="toggleable"> <a class="menu-item active" href="shop.html">Shop</a>
                       <ul class="sub-menu shop d-flex">
                         <div class="nav-column">
                           <h2>Layout shop</h2>
                           <li><a href="shop_grid+list_fullwidth.html">Shop grid fullwidth</a></li>
                           <li><a href="shop_grid+list_fullwidth.html">Shop list fullwidth</a></li>
-                          <li><a href="shop_grid+list_3col.html">shop grid 3 column</a></li>
-                          <li><a href="shop_grid+list_3col.html">shop list 3 column</a></li>
+                          <li><a href="shop.html">shop grid 3 column</a></li>
+                          <li><a href="shop.html">shop list 3 column</a></li>
                         </div>
                         <div class="nav-column">
                           <h2>Detail shop</h2>
@@ -125,12 +125,12 @@
                             <li><a href="homepage05.html">Homepage 5</a></li>
                           </ul>
                         </li>
-                        <li class="toggleable"><a class="menu-item" href="shop_grid+list_3col.html">Shop</a><span class="sub-menu--expander"><i class="icon_plus"></i></span>
+                        <li class="toggleable"><a class="menu-item" href="shop.html">Shop</a><span class="sub-menu--expander"><i class="icon_plus"></i></span>
                           <ul class="sub-menu">
                             <li><a href="shop_grid+list_fullwidth.html">Shop grid fullwidth</a></li>
                             <li><a href="shop_grid+list_fullwidth.html">Shop list fullwidth</a></li>
-                            <li><a href="shop_grid+list_3col.html">shop grid 3 column</a></li>
-                            <li><a href="shop_grid+list_3col.html">shop list 3 column</a></li>
+                            <li><a href="shop.html">shop grid 3 column</a></li>
+                            <li><a href="shop.html">shop list 3 column</a></li>
                             <li><a href="shop_detail.html">shop detail</a></li>
                             <li><a href="shop_detail_fullwidth.html">shop detail fullwidth</a></li>
                             <li><a href="shop_checkout.html">checkout</a></li>
@@ -188,19 +188,19 @@
                   <div class="department-menu d-flex justify-content-between align-items-center"><i class="fas fa-bars"></i>CATEGORIES<span><i class="arrow_carrot-down"></i></span></div>
                   <div class="department-dropdown-menu">
                     <ul>
-                    <li><a href="shop_grid+list_3col.html"> <i class="icon-1"></i>MEAT & FISH</a></li>
-                    <li><a href="shop_grid+list_3col.html"> <i class="icon-2"></i>BEVERAGES TEAS</a></li>
-                    <li><a href="shop_grid+list_3col.html"> <i class="icon-3"></i>CEREAL</a></li>
-                    <li><a href="shop_grid+list_3col.html"> <i class="icon-4"></i>BAKING INGREDIENTS</a></li>
-                    <li><a href="shop_grid+list_3col.html"> <i class="icon-5"></i>SPICES</a></li>
-                    <li><a href="shop_grid+list_3col.html"><i class="icon-6"></i>VEGETABLES & LEAFY</a></li>
-                    <li><a href="shop_grid+list_3col.html"><i class="icon-7"></i>TUBBERS</a></li>
-                    <li><a href="shop_grid+list_3col.html"> <i class="icon-8"></i>FLOUR</a></li>
-                    <li><a href="shop_grid+list_3col.html"> <i class="icon-9"></i>GRAINS</a></li>
-                    <li><a href="shop_grid+list_3col.html"><i class="icon-10"></i>Oatmeal</a></li>
-                    <li><a href="shop_grid+list_3col.html"> <i class="icon-11"></i>FRUITS</a></li>
-                    <li><a href="shop_grid+list_3col.html"> <i class="icon-12"></i>OILS</a></li>
-                    <li><a href="shop_grid+list_3col.html"> <i class="icon-8"></i>NUTS</a></li>
+                    <li><a href="shop.html"> <i class="icon-1"></i>MEAT & FISH</a></li>
+                    <li><a href="shop.html"> <i class="icon-2"></i>BEVERAGES TEAS</a></li>
+                    <li><a href="shop.html"> <i class="icon-3"></i>CEREAL</a></li>
+                    <li><a href="shop.html"> <i class="icon-4"></i>BAKING INGREDIENTS</a></li>
+                    <li><a href="shop.html"> <i class="icon-5"></i>SPICES</a></li>
+                    <li><a href="shop.html"><i class="icon-6"></i>VEGETABLES & LEAFY</a></li>
+                    <li><a href="shop.html"><i class="icon-7"></i>TUBBERS</a></li>
+                    <li><a href="shop.html"> <i class="icon-8"></i>FLOUR</a></li>
+                    <li><a href="shop.html"> <i class="icon-9"></i>GRAINS</a></li>
+                    <li><a href="shop.html"><i class="icon-10"></i>Oatmeal</a></li>
+                    <li><a href="shop.html"> <i class="icon-11"></i>FRUITS</a></li>
+                    <li><a href="shop.html"> <i class="icon-12"></i>OILS</a></li>
+                    <li><a href="shop.html"> <i class="icon-8"></i>NUTS</a></li>
                     </ul>
                   </div>
                 </div>
@@ -342,7 +342,7 @@
                 </div>
                 <div class="col-12 col-sm-4 text-sm-center text-md-left">
                   <div class="footer-quicklink">
-                    <h5>My Account</h5><a href="login.html">My Account</a><a href="contact.html">Contact</a><a href="shop_cart.html">Shopping cart</a><a href="shop_grid+list_3col.html">Shop</a>
+                    <h5>My Account</h5><a href="login.html">My Account</a><a href="contact.html">Contact</a><a href="shop_cart.html">Shopping cart</a><a href="shop.html">Shop</a>
                   </div>
                 </div>
                 <div class="col-12 col-sm-4 text-sm-center text-md-left">
