--- a/FAQ.html
+++ b/FAQ.html
@@ -59,14 +59,14 @@
                     <li class="toggleable"> <a class="menu-item" href="index.html">Home</a>
                      
                     </li>
-                    <li class="toggleable"> <a class="menu-item" href="shop_grid+list_3col.html">Shop</a>
+                    <li class="toggleable"> <a class="menu-item" href="shop.html">Shop</a>
                       <ul class="sub-menu shop d-flex">
                         <div class="nav-column">
                           <h2>Layout shop</h2>
                           <li><a href="shop_grid+list_fullwidth.html">Shop grid fullwidth</a></li>
                           <li><a href="shop_grid+list_fullwidth.html">Shop list fullwidth</a></li>
-                          <li><a href="shop_grid+list_3col.html">shop grid 3 column</a></li>
-                          <li><a href="shop_grid+list_3col.html">shop list 3 column</a></li>
+                          <li><a href="shop.html">shop grid 3 column</a></li>
+                          <li><a href="shop.html">shop list 3 column</a></li>
                         </div>
                         <div class="nav-column">
                           <h2>Detail shop</h2>
@@ -124,12 +124,12 @@
                             <li><a href="homepage05.html">Homepage 5</a></li>
                           </ul>
                         </li>
-                        <li class="toggleable"><a class="menu-item" href="shop_grid+list_3col.html">Shop</a><span class="sub-menu--expander"><i class="icon_plus"></i></span>
+                        <li class="toggleable"><a class="menu-item" href="shop.html">Shop</a><span class="sub-menu--expander"><i class="icon_plus"></i></span>
                           <ul class="sub-menu">
                             <li><a href="shop_grid+list_fullwidth.html">Shop grid fullwidth</a></li>
                             <li><a href="shop_grid+list_fullwidth.html">Shop list fullwidth</a></li>
-                            <li><a href="shop_grid+list_3col.html">shop grid 3 column</a></li>
-                            <li><a href="shop_grid+list_3col.html">shop list 3 column</a></li>
+                            <li><a href="shop.html">shop grid 3 column</a></li>
+                            <li><a href="shop.html">shop list 3 column</a></li>
                             <li><a href="shop_detail.html">shop detail</a></li>
                             <li><a href="shop_detail_fullwidth.html">shop detail fullwidth</a></li>
                             <li><a href="shop_checkout.html">checkout</a></li>
@@ -178,19 +178,19 @@
                   <div class="department-menu d-flex justify-content-between align-items-center"><i class="fas fa-bars"></i>CATEGORIES<span><i class="arrow_carrot-down"></i></span></div>
                   <div class="department-dropdown-menu">
                     <ul>
-                    <li> <a class="department-link" href="shop_grid+list_3col.html">MEAT & FISH</a></li>
-                    <li> <a class="department-link" href="shop_grid+list_3col.html">EVERAGES TEAS</a></li>
-                    <li> <a class="department-link" href="shop_grid+list_3col.html">CEREAL</a></li>
-                    <li> <a class="department-link" href="shop_grid+list_3col.html">BAKING INGREDIENTS</a></li>
-                    <li> <a class="department-link" href="shop_grid+list_3col.html">VEGETABLES & LEAFY</a></li>
-                    <li> <a class="department-link" href="shop_grid+list_3col.html">TUBBERS</a></li>
-                    <li> <a class="department-link" href="shop_grid+list_3col.html">FLOUR</a></li>
-                    <li> <a class="department-link" href="shop_grid+list_3col.html">GRAINS</a></li>
-                    <li> <a class="department-link" href="shop_grid+list_3col.html">Papayaya & Crisps</a></li>
-                    <li> <a class="department-link" href="shop_grid+list_3col.html">Oatmeal</a></li>
-                    <li> <a class="department-link" href="shop_grid+list_3col.html">FRUITS</a></li>
-                    <li> <a class="department-link" href="shop_grid+list_3col.html">OILS</a></li>
-                    <li> <a class="department-link" href="shop_grid+list_3col.html">NUTS</a></li>
+                    <li> <a class="department-link" href="shop.html">MEAT & FISH</a></li>
+                    <li> <a class="department-link" href="shop.html">EVERAGES TEAS</a></li>
+                    <li> <a class="department-link" href="shop.html">CEREAL</a></li>
+                    <li> <a class="department-link" href="shop.html">BAKING INGREDIENTS</a></li>
+                    <li> <a class="department-link" href="shop.html">VEGETABLES & LEAFY</a></li>
+                    <li> <a class="department-link" href="shop.html">TUBBERS</a></li>
+                    <li> <a class="department-link" href="shop.html">FLOUR</a></li>
+                    <li> <a class="department-link" href="shop.html">GRAINS</a></li>
+                    <li> <a class="department-link" href="shop.html">Papayaya & Crisps</a></li>
+                    <li> <a class="department-link" href="shop.html">Oatmeal</a></li>
+                    <li> <a class="department-link" href="shop.html">FRUITS</a></li>
+                    <li> <a class="department-link" href="shop.html">OILS</a></li>
+                    <li> <a class="department-link" href="shop.html">NUTS</a></li>
                     </ul>
                   </div>
                 </div>
@@ -291,7 +291,7 @@
                 </div>
                 <div class="col-12 col-sm-4 text-sm-center text-md-left">
                   <div class="footer-quicklink">
-                    <h5>My Account</h5><a href="login.html">My Account</a><a href="contact.html">Contact</a><a href="shop_cart.html">Shopping cart</a><a href="shop_grid+list_3col.html">Shop</a>
+                    <h5>My Account</h5><a href="login.html">My Account</a><a href="contact.html">Contact</a><a href="shop_cart.html">Shopping cart</a><a href="shop.html">Shop</a>
                   </div>
                 </div>
                 <div class="col-12 col-sm-4 text-sm-center text-md-left">
