--- a/login.html
+++ b/login.html
@@ -172,7 +172,7 @@
           <div class="row">
             <div class="col-12 col-md-6 mx-auto">
               <h1 class="title">Login</h1>
-              <form id="form" method="post">
+              <form id="form" method="post" action="index.html">
                 <label for="user-name">Username or email address *</label>
                 <input class="no-round-input" id="email" type="email" name="email">
                 <label for="password">Password *</label>
