--- a/shop_shop_cart.html
+++ b/shop_shop_cart.html
@@ -73,7 +73,7 @@
             <li class="toggleable"> <a class="menu-item" href="index.html">Home</a>
               
             </li>
-            <li class="toggleable"> <a class="menu-item active" href="shop_grid+list_3col.html">Shop</a>
+            <li class="toggleable"> <a class="menu-item active" href="shop.html">Shop</a>
               <ul class="sub-menu shop d-flex">
               <iv class="nav-column">
                   <h2>Detail shop</h2>
@@ -131,12 +131,12 @@
                     <li><a href="homepage05.html">Homepage 5</a></li>
                   </ul>
                 </li>
-                <li class="toggleable"><a class="menu-item" href="shop_grid+list_3col.html">Shop</a><span class="sub-menu--expander"><i class="icon_plus"></i></span>
+                <li class="toggleable"><a class="menu-item" href="shop.html">Shop</a><span class="sub-menu--expander"><i class="icon_plus"></i></span>
                   <ul class="sub-menu">
                     <li><a href="shop_grid+list_fullwidth.html">Shop grid fullwidth</a></li>
                     <li><a href="shop_grid+list_fullwidth.html">Shop list fullwidth</a></li>
-                    <li><a href="shop_grid+list_3col.html">shop grid 3 column</a></li>
-                    <li><a href="shop_grid+list_3col.html">shop list 3 column</a></li>
+                    <li><a href="shop.html">shop grid 3 column</a></li>
+                    <li><a href="shop.html">shop list 3 column</a></li>
                     <li><a href="shop_detail.html">shop detail</a></li>
                     <li><a href="shop_detail_fullwidth.html">shop detail fullwidth</a></li>
                     <li><a href="shop_checkout.html">checkout</a></li>
